Add missing tag translations

--- a/common/src/main/resources/assets/oritech/lang/en_us.json
+++ b/common/src/main/resources/assets/oritech/lang/en_us.json
@@ -794,5 +794,60 @@
   "text.config.oritech-config.section.blackHole": "Black Hole",
   "text.config.oritech-config.option.pullTimeMultiplier": "Black Hole Pull Time Multiplier",
   "text.config.oritech-config.option.pullRange": "Black Hole Pull Range",
-  "text.config.oritech-config.option.idleWaitTicks": "Black Hole Idle Wait Ticks"
+  "text.config.oritech-config.option.idleWaitTicks": "Black Hole Idle Wait Ticks",
+  "tag.item.c.carbon_fibre": "Carbon Fibre",
+  "tag.item.c.dusts.adamant": "Adamant Dust",
+  "tag.item.c.dusts.biosteel": "Biosteel Dust",
+  "tag.item.c.dusts.coal": "Coal Dust",
+  "tag.item.c.dusts.duratium": "Duratium Dust",
+  "tag.item.c.dusts.electrum": "Electrum Dust",
+  "tag.item.c.dusts.energite": "Energite Dust",
+  "tag.item.c.dusts.nickel": "Nickel Dust",
+  "tag.item.c.dusts.platinum": "Platinum Dust",
+  "tag.item.c.dusts.quartz": "Quartz Dust",
+  "tag.item.c.dusts.steel": "Steel Dust",
+  "tag.item.c.gems.fluxite": "Fluxite Gem",
+  "tag.item.c.ingots.adamant": "Adamant Ingot",
+  "tag.item.c.ingots.biosteel": "Biosteel Ingot",
+  "tag.item.c.ingots.duratium": "Duratium Ingot",
+  "tag.item.c.ingots.electrum": "Electrum Ingot",
+  "tag.item.c.ingots.energite": "Energite Ingot",
+  "tag.item.c.ingots.nickel": "Nickel Ingot",
+  "tag.item.c.ingots.platinum": "Platinum Ingot",
+  "tag.item.c.ingots.prometheum": "Prometheum Ingot",
+  "tag.item.c.ingots.steel": "Steel Ingot",
+  "tag.item.c.nuggets.nickel": "Nickel Nugget",
+  "tag.item.c.nuggets.platinum": "Platinum Nugget",
+  "tag.item.c.ores.nickel": "Nickel Ore",
+  "tag.item.c.ores.platinum": "Platinum Ore",
+  "tag.item.c.raw_materials.dyes.black": "Black Dye",
+  "tag.item.c.raw_materials.dyes.blue": "Blue Dye",
+  "tag.item.c.raw_materials.dyes.cyan": "Cyan Dye",
+  "tag.item.c.raw_materials.dyes.light_gray": "Light Gray Dye",
+  "tag.item.c.raw_materials.dyes.magenta": "Magenta Dye",
+  "tag.item.c.raw_materials.dyes.orange": "Orange Dye",
+  "tag.item.c.raw_materials.dyes.pink": "Pink Dye",
+  "tag.item.c.raw_materials.dyes.red": "Red Dye",
+  "tag.item.c.raw_materials.dyes.white": "White Dye",
+  "tag.item.c.raw_materials.dyes.yellow": "Yellow Dye",
+  "tag.item.c.raw_ores.nickel": "Raw Nickel",
+  "tag.item.c.raw_ores.platinum": "Raw Platinum",
+  "tag.item.c.silicon": "Silicon",
+  "tag.item.c.storage_blocks.adamant": "Adamant Block",
+  "tag.item.c.storage_blocks.biomass": "Biomass Block",
+  "tag.item.c.storage_blocks.biosteel": "Biosteel Block",
+  "tag.item.c.storage_blocks.duratium": "Duratium Block",
+  "tag.item.c.storage_blocks.electrum": "Electrum Block",
+  "tag.item.c.storage_blocks.energite": "Energite Block",
+  "tag.item.c.storage_blocks.fluxite": "Fluxite Block",
+  "tag.item.c.storage_blocks.nickel": "Nickel Block",
+  "tag.item.c.storage_blocks.plastic": "Plastic Block",
+  "tag.item.c.storage_blocks.platinum": "Platinum Block",
+  "tag.item.c.storage_blocks.raw_nickel": "Raw Nickel Block",
+  "tag.item.c.storage_blocks.raw_platinum": "Raw Platinum Block",
+  "tag.item.c.storage_blocks.silicon": "Silicon Block",
+  "tag.item.c.storage_blocks.steel": "Steel Block",
+  "tag.item.c.wires": "Wires",
+  "tag.item.oritech.biomass": "Biomass",
+  "tag.item.oritech.plating": "Plating"
 }
