Update black hole item description / wiki lore section

--- a/common/src/main/resources/assets/oritech/lang/en_us.json
+++ b/common/src/main/resources/assets/oritech/lang/en_us.json
@@ -401,7 +401,7 @@
   "block.oritech.raw_platinum_block": "Block of Raw Platinum",
   "block.oritech.black_hole_block": [
     {
-      "text": "Black Hole (WIP)",
+      "text": "Black Hole",
       "color": "#cc66ff"
     }
   ],
