--- a/docs/interaction/particle_accelerator.mdx
+++ b/docs/interaction/particle_accelerator.mdx
@@ -112,6 +112,6 @@ The energy required to achieve this is immense, and little is known about these 
 Researchers have noted that colliding fire charges with a collision energy over 5000J seems to bring the nether closer.
 Ender pearls with more than 10000J appear to do the same for the end dimension.
 
-There are unsettling rumors of reckless scientists attempting to bombard these incursion points with speeds that defy known limits,
-aiming to create singularities of their own. However, none have returned to share their findings, leaving their fates shrouded in mystery.
-Sensors are recording a mysterious tachyon stream from the site of the experiment.
+There are unsettling rumors of reckless scientists attempting to bombard these incursion points with speeds that defy known measurement methods,
+aiming to create singularities of their own. However, none have returned to share their findings, leaving their fates shrouded in mystery. Ever since,
+sensors are recording a mysterious tachyon stream from the site of the experiment.
