New Crowdin updates (#186)

--- a/common/src/main/resources/assets/oritech/lang/tr_tr.json
+++ b/common/src/main/resources/assets/oritech/lang/tr_tr.json
@@ -280,7 +280,8 @@
   "tooltip.oritech.enchanter_item_needed": "Eşya Yerleştir",
   "tooltip.oritech.enchanter_souls_used": " Ruhlar Kullanıldı",
   "tooltip.oritech.enchanter_selection": "Büyü Seç",
-  "tooltip.oritech.creative_tank": "Ayarlamak için bir kovayla veya boşaltmak için boş bir kovayla sağ tıkla",
+  "tooltip.oritech.creative_tank": "Right click with a bucket to set or an empty one to empty.",
+  "tooltip.oritech.fuel_generator_block.extra": "Outputs energy only at the visual connector ports.",
   "block.oritech.banana_block": "Muz Bloğu",
   "block.oritech.machine_frame_block": "Makine Şasisi",
   "block.oritech.fluid_pipe": "Sıvı Borusu",
@@ -400,7 +401,7 @@
   "block.oritech.raw_platinum_block": "Block of Raw Platinum",
   "block.oritech.black_hole_block": [
     {
-      "text": "Kara Delik (WIP)",
+      "text": "Kara Delik",
       "color": "#cc66ff"
     }
   ],
@@ -525,6 +526,7 @@
   "fluid.oritech.still_fuel": "Turbo Yakıt",
   "fluid.oritech.still_oil": "Oil",
   "fluid.oritech.still_steam": "Buhar",
+  "item.oritech.wrench": "Boru Anahtarı",
   "item.oritech.promethium_axe": [
     {
       "text": "Prometheum Savaş Baltası",
@@ -570,6 +572,15 @@
   "tooltip.oritech.tool_mode.area_range.area": "Mod: Alan",
   "tooltip.oritech.tool_mode.area_range.single": "Mod: Tek",
   "config.jade.plugin_oritech.machine_core_controller": "Oritech Denetleyici Bağlantı Görünümü",
+  "text.oritech.reactor.rod_count": "Çubuk Sayısı: %s",
+  "text.oritech.reactor.generated_pulses": "İç Atımlar: %s",
+  "text.oritech.reactor.received_pulses": "Dış Atımlar: %s",
+  "text.oritech.reactor.generated_heat": "Üretilen Isı: %s K/t",
+  "text.oritech.reactor.generated_energy": "Üretilen Enerji: %s RF/t",
+  "text.oritech.reactor.heat_to_reactor": "Reaktöre giden Isı: %s K/t",
+  "text.oritech.reactor.heat": "Isı: %s K",
+  "text.oritech.reactor.collected_heat": "Sindirilen Isı: %s K/t",
+  "text.oritech.reactor.removed_heat": "Dağıtılmış Isı: %s K/t",
   "text.oritech.accelerator.ui.waiting.0": "Bekliyor.",
   "text.oritech.accelerator.ui.waiting.1": "Bekliyor..",
   "text.oritech.accelerator.ui.waiting.2": "Bekliyor...",
@@ -783,5 +794,60 @@
   "text.config.oritech-config.section.blackHole": "Kara Delik",
   "text.config.oritech-config.option.pullTimeMultiplier": "Kara Delik Çekme Süresi Çarpanı",
   "text.config.oritech-config.option.pullRange": "Kara Delik Çekme Menzili",
-  "text.config.oritech-config.option.idleWaitTicks": "Kara Delik Boşta Bekleme Tik Sayısı"
+  "text.config.oritech-config.option.idleWaitTicks": "Kara Delik Boşta Bekleme Tik Sayısı",
+  "tag.item.c.carbon_fibre": "Carbon Fibre",
+  "tag.item.c.dusts.adamant": "Adamant Toz",
+  "tag.item.c.dusts.biosteel": "Biyoçelik Toz",
+  "tag.item.c.dusts.coal": "Kömür Tozu",
+  "tag.item.c.dusts.duratium": "Duratium Toz",
+  "tag.item.c.dusts.electrum": "Elektrum Toz",
+  "tag.item.c.dusts.energite": "Enerjit Toz",
+  "tag.item.c.dusts.nickel": "Nikel Toz",
+  "tag.item.c.dusts.platinum": "Platin Toz",
+  "tag.item.c.dusts.quartz": "Kuvars Toz",
+  "tag.item.c.dusts.steel": "Çelik Tozu",
+  "tag.item.c.gems.fluxite": "Fluxite Gem",
+  "tag.item.c.ingots.adamant": "Adamant Külçesi",
+  "tag.item.c.ingots.biosteel": "Biyoçelik Külçesi",
+  "tag.item.c.ingots.duratium": "Duratium Külçesi",
+  "tag.item.c.ingots.electrum": "Elektrum Külçesi",
+  "tag.item.c.ingots.energite": "Enerjit Külçesi",
+  "tag.item.c.ingots.nickel": "Nikel Külçesi",
+  "tag.item.c.ingots.platinum": "Platin Külçesi",
+  "tag.item.c.ingots.prometheum": "Prometheum Ingot",
+  "tag.item.c.ingots.steel": "Çelik Külçesi",
+  "tag.item.c.nuggets.nickel": "Nikel Parçası",
+  "tag.item.c.nuggets.platinum": "Platin Parçası",
+  "tag.item.c.ores.nickel": "Nikel Cevheri",
+  "tag.item.c.ores.platinum": "Platinum Ore",
+  "tag.item.c.raw_materials.dyes.black": "Black Dye",
+  "tag.item.c.raw_materials.dyes.blue": "Blue Dye",
+  "tag.item.c.raw_materials.dyes.cyan": "Cyan Dye",
+  "tag.item.c.raw_materials.dyes.light_gray": "Light Gray Dye",
+  "tag.item.c.raw_materials.dyes.magenta": "Magenta Dye",
+  "tag.item.c.raw_materials.dyes.orange": "Orange Dye",
+  "tag.item.c.raw_materials.dyes.pink": "Pink Dye",
+  "tag.item.c.raw_materials.dyes.red": "Red Dye",
+  "tag.item.c.raw_materials.dyes.white": "White Dye",
+  "tag.item.c.raw_materials.dyes.yellow": "Yellow Dye",
+  "tag.item.c.raw_ores.nickel": "Ham Nikel",
+  "tag.item.c.raw_ores.platinum": "Ham Platin",
+  "tag.item.c.silicon": "Silikon",
+  "tag.item.c.storage_blocks.adamant": "Adamant Block",
+  "tag.item.c.storage_blocks.biomass": "Biomass Block",
+  "tag.item.c.storage_blocks.biosteel": "Biosteel Block",
+  "tag.item.c.storage_blocks.duratium": "Duratium Block",
+  "tag.item.c.storage_blocks.electrum": "Electrum Block",
+  "tag.item.c.storage_blocks.energite": "Energite Block",
+  "tag.item.c.storage_blocks.fluxite": "Fluxite Block",
+  "tag.item.c.storage_blocks.nickel": "Nickel Block",
+  "tag.item.c.storage_blocks.plastic": "Plastic Block",
+  "tag.item.c.storage_blocks.platinum": "Platinum Block",
+  "tag.item.c.storage_blocks.raw_nickel": "Raw Nickel Block",
+  "tag.item.c.storage_blocks.raw_platinum": "Raw Platinum Block",
+  "tag.item.c.storage_blocks.silicon": "Silicon Block",
+  "tag.item.c.storage_blocks.steel": "Steel Block",
+  "tag.item.c.wires": "Wires",
+  "tag.item.oritech.biomass": "Biyokütle",
+  "tag.item.oritech.plating": "Plating"
 }
