--- a/common/src/main/resources/assets/oritech/lang/zh_cn.json
+++ b/common/src/main/resources/assets/oritech/lang/zh_cn.json
@@ -66,7 +66,7 @@
   "tooltip.oritech.needs_laser_power": "必须使用末影激光供能",
   "tooltip.oritech.steam_engine": "将蒸汽处理为RF和水。可以被连接在一起",
   "tooltip.oritech.item_filter": "用来过滤哪些物品能被插入一个物品栏。",
-  "tooltip.oritech.particle_collector": "Collects the energy of tachyons emitted by particle collisions.",
+  "tooltip.oritech.particle_collector": "收集由粒子碰撞产生的速子能量。",
   "button.oritech.item_filter.whitelist": "白名单",
   "title.oritech.item_filter.whitelist": "白名单",
   "tooltip.oritech.item_filter.whitelist": "只允许列表中的物品通过",
@@ -200,7 +200,7 @@
   "tooltip.oritech.energy_usage": "%s / %s RF\n%s%% 已充能\n\n最大功率：%s RF/刻",
   "title.oritech.machine.no_addons": "未连接插件",
   "button.oritech.machine.addons": "插件",
-  "tooltip.oritech.pipe_booster": "Increases the extraction speed of a fluid/item pipe behind it",
+  "tooltip.oritech.pipe_booster": "增加其后的流体/物流管道提取速度。",
   "title.oritech.machine.capacitor_added_capacity": "🔋 %d RF ",
   "tooltip.oritech.machine.capacitor_added_capacity": "附加容量",
   "title.oritech.machine.capacitor_added_throughput": "🔋 %d RF/刻",
@@ -215,14 +215,14 @@
   "title.oritech.catalyst.stabilized": "稳定",
   "title.oritech.catalyst.semi_stable": "半稳定",
   "title.oritech.catalyst.unstable": "不稳定",
-  "tooltip.oritech.redstone_disabled": "Stopped",
-  "tooltip.oritech.redstone_disabled.tooltip": "This machine has been disabled with an active redstone signal.",
-  "tooltip.oritech.redstone_disabled_storage": "Blocked",
-  "tooltip.oritech.redstone_disabled_storage.tooltip": "Will not output power while disabled with a redstone signal",
-  "tooltip.oritech.redstone_enabled": "Normal",
-  "tooltip.oritech.redstone_enabled.tooltip": "This machine is operating as normal.\nDisable with with a redstone signal to the redstone addon",
-  "tooltip.oritech.redstone_enabled_direct": "Normal",
-  "tooltip.oritech.redstone_enabled_direct.tooltip": "This machine is operating as normal.\nDisable with with a redstone signal to this block or the addon",
+  "tooltip.oritech.redstone_disabled": "已停止",
+  "tooltip.oritech.redstone_disabled.tooltip": "该机器已用高电平红石信号停机",
+  "tooltip.oritech.redstone_disabled_storage": "已禁用",
+  "tooltip.oritech.redstone_disabled_storage.tooltip": "将在输入红石信号时禁用输出能量",
+  "tooltip.oritech.redstone_enabled": "正常",
+  "tooltip.oritech.redstone_enabled.tooltip": "该机器正常运行。向红石插件输入红石信号以禁用。",
+  "tooltip.oritech.redstone_enabled_direct": "正常",
+  "tooltip.oritech.redstone_enabled_direct.tooltip": "该机器正常运行。向该方块或相邻红石插件输入信号以禁用",
   "tooltip.oritech.spawner.collected_souls": "%d / %d 灵魂",
   "tooltip.oritech.accelerator": "将粒子注入粒子加速器导向环",
   "tooltip.oritech.accelerator_motor": "使用能量来加速通过它的粒子。",
@@ -280,7 +280,8 @@
   "tooltip.oritech.enchanter_item_needed": "插入物品",
   "tooltip.oritech.enchanter_souls_used": " 已用灵魂",
   "tooltip.oritech.enchanter_selection": "选择附魔",
-  "tooltip.oritech.creative_tank": "使用任意流体桶右键以设置液体，空桶右键以清空",
+  "tooltip.oritech.creative_tank": "Right click with a bucket to set or an empty one to empty.",
+  "tooltip.oritech.fuel_generator_block.extra": "Outputs energy only at the visual connector ports.",
   "block.oritech.banana_block": "香蕉块",
   "block.oritech.machine_frame_block": "机器框架",
   "block.oritech.fluid_pipe": "流体管道",
@@ -301,7 +302,7 @@
   "block.oritech.fragment_forge_block": "粉碎工厂",
   "block.oritech.assembler_block": "装配器",
   "block.oritech.foundry_block": "铸造器",
-  "block.oritech.particle_collector_block": "Tachyon Absorber",
+  "block.oritech.particle_collector_block": "速子吸收器",
   "block.oritech.centrifuge_block": "离心机",
   "block.oritech.atomic_forge_block": "原子锻造器",
   "block.oritech.bio_generator_block": "生物质能发电机",
@@ -313,7 +314,7 @@
   "block.oritech.powered_furnace_block": "电炉",
   "block.oritech.laser_arm_block": "末影激光器",
   "block.oritech.deep_drill_block": "基岩层钻机",
-  "block.oritech.pipe_booster_block": "Pipe Booster",
+  "block.oritech.pipe_booster_block": "管道升压器",
   "block.oritech.drone_port_block": "无人机港",
   "block.oritech.charger_block": "装备充能器",
   "block.oritech.small_storage_block": "便携能量存储",
@@ -384,23 +385,23 @@
   "block.oritech.industrial_glass_block": "工业玻璃",
   "block.oritech.capacitor_addon_extender": "能量储存插件",
   "block.oritech.treefeller_block": "伐木器",
-  "block.oritech.steel_block": "Block of Steel",
-  "block.oritech.energite_block": "Block of Energite",
-  "block.oritech.nickel_block": "Block of Nickel",
-  "block.oritech.biosteel_block": "Block of Biosteel",
-  "block.oritech.platinum_block": "Block of Platinum",
-  "block.oritech.adamant_block": "Block of Adamant",
-  "block.oritech.electrum_block": "Block of Electrum",
-  "block.oritech.duratium_block": "Block of Duratium",
-  "block.oritech.biomass_block": "Block of Biomass",
-  "block.oritech.plastic_block": "Block of Plastic",
-  "block.oritech.fluxite_block": "Block of Fluxite",
-  "block.oritech.silicon_block": "Block of Silicon",
-  "block.oritech.raw_nickel_block": "Block of Raw Nickel",
-  "block.oritech.raw_platinum_block": "Block of Raw Platinum",
+  "block.oritech.steel_block": "钢块",
+  "block.oritech.energite_block": "辐镍晶块",
+  "block.oritech.nickel_block": "镍块",
+  "block.oritech.biosteel_block": "有机钢块",
+  "block.oritech.platinum_block": "铂块",
+  "block.oritech.adamant_block": "精镍块",
+  "block.oritech.electrum_block": "琥珀金块",
+  "block.oritech.duratium_block": "昶铂锭",
+  "block.oritech.biomass_block": "生物质块",
+  "block.oritech.plastic_block": "塑料块",
+  "block.oritech.fluxite_block": "辐水晶块",
+  "block.oritech.silicon_block": "硅块",
+  "block.oritech.raw_nickel_block": "粗镍块",
+  "block.oritech.raw_platinum_block": "粗铂块",
   "block.oritech.black_hole_block": [
     {
-      "text": "黑洞（未完成）",
+      "text": "黑洞",
       "color": "#cc66ff"
     }
   ],
@@ -523,8 +524,9 @@
   "item.oritech.jetpack_exo_elytra": "强化外骨骼鞘翅",
   "item.oritech.oritech_guide": "Oritech 手册",
   "fluid.oritech.still_fuel": "涡轮燃料",
-  "fluid.oritech.still_oil": "Oil",
+  "fluid.oritech.still_oil": "石油",
   "fluid.oritech.still_steam": "蒸汽",
+  "item.oritech.wrench": "管道扳手",
   "item.oritech.promethium_axe": [
     {
       "text": "钷战斧",
@@ -570,6 +572,15 @@
   "tooltip.oritech.tool_mode.area_range.area": "模式：区域",
   "tooltip.oritech.tool_mode.area_range.single": "模式：单个",
   "config.jade.plugin_oritech.machine_core_controller": "Oritech控制器连接视图",
+  "text.oritech.reactor.rod_count": "杆数：%s",
+  "text.oritech.reactor.generated_pulses": "内部脉冲数：%s",
+  "text.oritech.reactor.received_pulses": "外部脉冲数：%s",
+  "text.oritech.reactor.generated_heat": "产热：%s K/t",
+  "text.oritech.reactor.generated_energy": "产能：%s RF/t",
+  "text.oritech.reactor.heat_to_reactor": "至反应炉的热量：%s K/t",
+  "text.oritech.reactor.heat": "热量：%s K",
+  "text.oritech.reactor.collected_heat": "耗热：%s K/t",
+  "text.oritech.reactor.removed_heat": "散热：%s K/t",
   "text.oritech.accelerator.ui.waiting.0": "等待中.",
   "text.oritech.accelerator.ui.waiting.1": "等待中..",
   "text.oritech.accelerator.ui.waiting.2": "等待中...",
@@ -586,7 +597,7 @@
   "text.oritech.accelerator.ui.exited": "粒子已退出",
   "text.oritech.accelerator.ui.exited.stats": "坐标 %s\n最后转弯距离：%s\n最小转弯距离：%s",
   "text.oritech.accelerator.ui.exited.nogate": "坐标：%s\n范围内未找到门\n范围：%s",
-  "text.oritech.redstone_power": "Level: %s",
+  "text.oritech.redstone_power": "等级：%s",
   "text.config.oritech-config.title": "Oritech设置",
   "text.config.oritech-config.section.machineSettings": "机器",
   "text.config.oritech-config.category.processingMachines": "处理机器",
@@ -777,11 +788,66 @@
   "text.config.oritech-config.option.endPortalRequiredSpeed": "末地传送门产生最小对撞能量",
   "text.config.oritech-config.option.netherPortalRequiredSpeed": "下界传送门产生最小对撞能量",
   "text.config.oritech-config.option.blackHoleRequiredSpeed": "黑洞产生最小对撞能量",
-  "text.config.oritech-config.option.collectorEnergyStorage": "Tachyon Collector Energy Capacity",
-  "text.config.oritech-config.option.blackHoleTachyonEnergy": "Energy of Tachyons from Black Holes",
-  "text.config.oritech-config.option.tachyonCollisionEnergyFactor": "Particle Collision Tachyon RF Multiplier",
+  "text.config.oritech-config.option.collectorEnergyStorage": "速子收集器能量容量",
+  "text.config.oritech-config.option.blackHoleTachyonEnergy": "来自黑洞的速子能量",
+  "text.config.oritech-config.option.tachyonCollisionEnergyFactor": "粒子碰撞产生速子能量倍率",
   "text.config.oritech-config.section.blackHole": "黑洞",
   "text.config.oritech-config.option.pullTimeMultiplier": "黑洞撕扯频率",
   "text.config.oritech-config.option.pullRange": "黑洞撕扯范围",
-  "text.config.oritech-config.option.idleWaitTicks": "黑洞空闲等待时间（单位：刻）"
+  "text.config.oritech-config.option.idleWaitTicks": "黑洞空闲等待时间（单位：刻）",
+  "tag.item.c.carbon_fibre": "Carbon Fibre",
+  "tag.item.c.dusts.adamant": "精镍粉",
+  "tag.item.c.dusts.biosteel": "有机钢粉",
+  "tag.item.c.dusts.coal": "煤粉",
+  "tag.item.c.dusts.duratium": "昶铂粉",
+  "tag.item.c.dusts.electrum": "琥珀金粉",
+  "tag.item.c.dusts.energite": "辐镍晶粉",
+  "tag.item.c.dusts.nickel": "镍粉",
+  "tag.item.c.dusts.platinum": "铂粉",
+  "tag.item.c.dusts.quartz": "石英粉",
+  "tag.item.c.dusts.steel": "钢粉",
+  "tag.item.c.gems.fluxite": "Fluxite Gem",
+  "tag.item.c.ingots.adamant": "精镍锭",
+  "tag.item.c.ingots.biosteel": "有机钢锭",
+  "tag.item.c.ingots.duratium": "昶铂锭",
+  "tag.item.c.ingots.electrum": "琥珀金锭",
+  "tag.item.c.ingots.energite": "辐镍晶锭",
+  "tag.item.c.ingots.nickel": "镍锭",
+  "tag.item.c.ingots.platinum": "铂锭",
+  "tag.item.c.ingots.prometheum": "Prometheum Ingot",
+  "tag.item.c.ingots.steel": "钢锭",
+  "tag.item.c.nuggets.nickel": "镍粒",
+  "tag.item.c.nuggets.platinum": "铂粒",
+  "tag.item.c.ores.nickel": "镍矿石",
+  "tag.item.c.ores.platinum": "Platinum Ore",
+  "tag.item.c.raw_materials.dyes.black": "Black Dye",
+  "tag.item.c.raw_materials.dyes.blue": "Blue Dye",
+  "tag.item.c.raw_materials.dyes.cyan": "Cyan Dye",
+  "tag.item.c.raw_materials.dyes.light_gray": "Light Gray Dye",
+  "tag.item.c.raw_materials.dyes.magenta": "Magenta Dye",
+  "tag.item.c.raw_materials.dyes.orange": "Orange Dye",
+  "tag.item.c.raw_materials.dyes.pink": "Pink Dye",
+  "tag.item.c.raw_materials.dyes.red": "Red Dye",
+  "tag.item.c.raw_materials.dyes.white": "White Dye",
+  "tag.item.c.raw_materials.dyes.yellow": "Yellow Dye",
+  "tag.item.c.raw_ores.nickel": "粗镍",
+  "tag.item.c.raw_ores.platinum": "粗铂",
+  "tag.item.c.silicon": "硅",
+  "tag.item.c.storage_blocks.adamant": "Adamant Block",
+  "tag.item.c.storage_blocks.biomass": "Biomass Block",
+  "tag.item.c.storage_blocks.biosteel": "Biosteel Block",
+  "tag.item.c.storage_blocks.duratium": "Duratium Block",
+  "tag.item.c.storage_blocks.electrum": "Electrum Block",
+  "tag.item.c.storage_blocks.energite": "Energite Block",
+  "tag.item.c.storage_blocks.fluxite": "Fluxite Block",
+  "tag.item.c.storage_blocks.nickel": "Nickel Block",
+  "tag.item.c.storage_blocks.plastic": "Plastic Block",
+  "tag.item.c.storage_blocks.platinum": "Platinum Block",
+  "tag.item.c.storage_blocks.raw_nickel": "Raw Nickel Block",
+  "tag.item.c.storage_blocks.raw_platinum": "Raw Platinum Block",
+  "tag.item.c.storage_blocks.silicon": "Silicon Block",
+  "tag.item.c.storage_blocks.steel": "Steel Block",
+  "tag.item.c.wires": "Wires",
+  "tag.item.oritech.biomass": "生物质",
+  "tag.item.oritech.plating": "Plating"
 }
