--- a/common/src/main/resources/assets/oritech/lang/es_es.json
+++ b/common/src/main/resources/assets/oritech/lang/es_es.json
@@ -280,7 +280,8 @@
   "tooltip.oritech.enchanter_item_needed": "Insertar objeto",
   "tooltip.oritech.enchanter_souls_used": " Almas utilizadas",
   "tooltip.oritech.enchanter_selection": "Seleccionar encantamiento",
-  "tooltip.oritech.creative_tank": "Haz clic derecho con un cubo para fijar o vacío para vaciar",
+  "tooltip.oritech.creative_tank": "Right click with a bucket to set or an empty one to empty.",
+  "tooltip.oritech.fuel_generator_block.extra": "Outputs energy only at the visual connector ports.",
   "block.oritech.banana_block": "Bloque de plátano",
   "block.oritech.machine_frame_block": "Marco de máquina",
   "block.oritech.fluid_pipe": "Tubería de Fluidos",
@@ -400,7 +401,7 @@
   "block.oritech.raw_platinum_block": "Block of Raw Platinum",
   "block.oritech.black_hole_block": [
     {
-      "text": "Agujero Negro (WIP)",
+      "text": "Agujero Negro",
       "color": "#cc66ff"
     }
   ],
@@ -525,6 +526,7 @@
   "fluid.oritech.still_fuel": "Turbofuel",
   "fluid.oritech.still_oil": "Oil",
   "fluid.oritech.still_steam": "Vapor",
+  "item.oritech.wrench": "Pipe Wrench",
   "item.oritech.promethium_axe": [
     {
       "text": "Hacha de batalla de Prometheum",
@@ -570,6 +572,15 @@
   "tooltip.oritech.tool_mode.area_range.area": "Modo: Área",
   "tooltip.oritech.tool_mode.area_range.single": "Modo: Único",
   "config.jade.plugin_oritech.machine_core_controller": "Vista del enlace del controlador Oritech",
+  "text.oritech.reactor.rod_count": "Rod Count: %s",
+  "text.oritech.reactor.generated_pulses": "Internal Pulses: %s",
+  "text.oritech.reactor.received_pulses": "External Pulses: %s",
+  "text.oritech.reactor.generated_heat": "Generated Heat: %s K/t",
+  "text.oritech.reactor.generated_energy": "Generated Energy: %s RF/t",
+  "text.oritech.reactor.heat_to_reactor": "Heat to Reactor: %s K/t",
+  "text.oritech.reactor.heat": "Heat: %s K",
+  "text.oritech.reactor.collected_heat": "Ingested Heat: %s K/t",
+  "text.oritech.reactor.removed_heat": "Dispersed Heat: %s K/t",
   "text.oritech.accelerator.ui.waiting.0": "Esperando.",
   "text.oritech.accelerator.ui.waiting.1": "Esperando..",
   "text.oritech.accelerator.ui.waiting.2": "Esperando...",
@@ -783,5 +794,60 @@
   "text.config.oritech-config.section.blackHole": "Agujero Negro",
   "text.config.oritech-config.option.pullTimeMultiplier": "Multiplicador de Tiempo de Atracción del Agujero Negro",
   "text.config.oritech-config.option.pullRange": "Rango de Atracción del Agujero Negro",
-  "text.config.oritech-config.option.idleWaitTicks": "Ticks de Espera Inactiva del Agujero Negro"
+  "text.config.oritech-config.option.idleWaitTicks": "Ticks de Espera Inactiva del Agujero Negro",
+  "tag.item.c.carbon_fibre": "Carbon Fibre",
+  "tag.item.c.dusts.adamant": "Polvo de adamantio",
+  "tag.item.c.dusts.biosteel": "Polvo de biometal",
+  "tag.item.c.dusts.coal": "Polvo de carbón",
+  "tag.item.c.dusts.duratium": "Polvo de duratium",
+  "tag.item.c.dusts.electrum": "Polvo de electrum",
+  "tag.item.c.dusts.energite": "Polvo de energita",
+  "tag.item.c.dusts.nickel": "Polvo de níquel",
+  "tag.item.c.dusts.platinum": "Polvo de platino",
+  "tag.item.c.dusts.quartz": "Polvo de cuarzo",
+  "tag.item.c.dusts.steel": "Polvo de acero",
+  "tag.item.c.gems.fluxite": "Fluxite Gem",
+  "tag.item.c.ingots.adamant": "Lingote de adamantio",
+  "tag.item.c.ingots.biosteel": "Lingote de biometal",
+  "tag.item.c.ingots.duratium": "Lingote de duratium",
+  "tag.item.c.ingots.electrum": "Lingote de electrum",
+  "tag.item.c.ingots.energite": "Lingote de energita",
+  "tag.item.c.ingots.nickel": "Lingote de níquel",
+  "tag.item.c.ingots.platinum": "Lingote de platino",
+  "tag.item.c.ingots.prometheum": "Prometheum Ingot",
+  "tag.item.c.ingots.steel": "Lingote de acero",
+  "tag.item.c.nuggets.nickel": "Pepita de níquel",
+  "tag.item.c.nuggets.platinum": "Pepita de platino",
+  "tag.item.c.ores.nickel": "Mineral de níquel",
+  "tag.item.c.ores.platinum": "Platinum Ore",
+  "tag.item.c.raw_materials.dyes.black": "Black Dye",
+  "tag.item.c.raw_materials.dyes.blue": "Blue Dye",
+  "tag.item.c.raw_materials.dyes.cyan": "Cyan Dye",
+  "tag.item.c.raw_materials.dyes.light_gray": "Light Gray Dye",
+  "tag.item.c.raw_materials.dyes.magenta": "Magenta Dye",
+  "tag.item.c.raw_materials.dyes.orange": "Orange Dye",
+  "tag.item.c.raw_materials.dyes.pink": "Pink Dye",
+  "tag.item.c.raw_materials.dyes.red": "Red Dye",
+  "tag.item.c.raw_materials.dyes.white": "White Dye",
+  "tag.item.c.raw_materials.dyes.yellow": "Yellow Dye",
+  "tag.item.c.raw_ores.nickel": "Níquel en bruto",
+  "tag.item.c.raw_ores.platinum": "Platino en bruto",
+  "tag.item.c.silicon": "Silicio",
+  "tag.item.c.storage_blocks.adamant": "Adamant Block",
+  "tag.item.c.storage_blocks.biomass": "Biomass Block",
+  "tag.item.c.storage_blocks.biosteel": "Biosteel Block",
+  "tag.item.c.storage_blocks.duratium": "Duratium Block",
+  "tag.item.c.storage_blocks.electrum": "Electrum Block",
+  "tag.item.c.storage_blocks.energite": "Energite Block",
+  "tag.item.c.storage_blocks.fluxite": "Fluxite Block",
+  "tag.item.c.storage_blocks.nickel": "Nickel Block",
+  "tag.item.c.storage_blocks.plastic": "Plastic Block",
+  "tag.item.c.storage_blocks.platinum": "Platinum Block",
+  "tag.item.c.storage_blocks.raw_nickel": "Raw Nickel Block",
+  "tag.item.c.storage_blocks.raw_platinum": "Raw Platinum Block",
+  "tag.item.c.storage_blocks.silicon": "Silicon Block",
+  "tag.item.c.storage_blocks.steel": "Steel Block",
+  "tag.item.c.wires": "Wires",
+  "tag.item.oritech.biomass": "Biomasa",
+  "tag.item.oritech.plating": "Plating"
 }
