--- a/common/src/main/resources/assets/oritech/lang/fr_fr.json
+++ b/common/src/main/resources/assets/oritech/lang/fr_fr.json
@@ -280,7 +280,8 @@
   "tooltip.oritech.enchanter_item_needed": "Insérer l'objet",
   "tooltip.oritech.enchanter_souls_used": " Âmes utilisées",
   "tooltip.oritech.enchanter_selection": "Sélectionner l'enchantement",
-  "tooltip.oritech.creative_tank": "Clic droit avec un seau pour définir ou un vide pour vider",
+  "tooltip.oritech.creative_tank": "Right click with a bucket to set or an empty one to empty.",
+  "tooltip.oritech.fuel_generator_block.extra": "Outputs energy only at the visual connector ports.",
   "block.oritech.banana_block": "Bloc de banane",
   "block.oritech.machine_frame_block": "Cadre de machine",
   "block.oritech.fluid_pipe": "Tuyau de liquide",
@@ -400,7 +401,7 @@
   "block.oritech.raw_platinum_block": "Block of Raw Platinum",
   "block.oritech.black_hole_block": [
     {
-      "text": "Trou noir (En développement)",
+      "text": "Trou noir",
       "color": "#cc66ff"
     }
   ],
@@ -525,6 +526,7 @@
   "fluid.oritech.still_fuel": "Turbocarburant",
   "fluid.oritech.still_oil": "Pétrole",
   "fluid.oritech.still_steam": "Vapeur",
+  "item.oritech.wrench": "Pipe Wrench",
   "item.oritech.promethium_axe": [
     {
       "text": "Hache de combat en Prometheum",
@@ -570,6 +572,15 @@
   "tooltip.oritech.tool_mode.area_range.area": "Mode : Zone",
   "tooltip.oritech.tool_mode.area_range.single": "Mode : Unique",
   "config.jade.plugin_oritech.machine_core_controller": "Vue du lien contrôleur Oritech",
+  "text.oritech.reactor.rod_count": "Rod Count: %s",
+  "text.oritech.reactor.generated_pulses": "Internal Pulses: %s",
+  "text.oritech.reactor.received_pulses": "External Pulses: %s",
+  "text.oritech.reactor.generated_heat": "Generated Heat: %s K/t",
+  "text.oritech.reactor.generated_energy": "Generated Energy: %s RF/t",
+  "text.oritech.reactor.heat_to_reactor": "Heat to Reactor: %s K/t",
+  "text.oritech.reactor.heat": "Heat: %s K",
+  "text.oritech.reactor.collected_heat": "Ingested Heat: %s K/t",
+  "text.oritech.reactor.removed_heat": "Dispersed Heat: %s K/t",
   "text.oritech.accelerator.ui.waiting.0": "En attente.",
   "text.oritech.accelerator.ui.waiting.1": "En attente..",
   "text.oritech.accelerator.ui.waiting.2": "En attente...",
@@ -783,5 +794,60 @@
   "text.config.oritech-config.section.blackHole": "Trou noir",
   "text.config.oritech-config.option.pullTimeMultiplier": "Multiplicateur de temps d'attraction du trou noir",
   "text.config.oritech-config.option.pullRange": "Portée d'attraction du trou noir",
-  "text.config.oritech-config.option.idleWaitTicks": "Ticks d'attente en veille du trou noir"
+  "text.config.oritech-config.option.idleWaitTicks": "Ticks d'attente en veille du trou noir",
+  "tag.item.c.carbon_fibre": "Carbon Fibre",
+  "tag.item.c.dusts.adamant": "Poussière d'adamant",
+  "tag.item.c.dusts.biosteel": "Poussière de biosteel",
+  "tag.item.c.dusts.coal": "Poussière de charbon",
+  "tag.item.c.dusts.duratium": "Poussière de duratium",
+  "tag.item.c.dusts.electrum": "Poussière d'électrum",
+  "tag.item.c.dusts.energite": "Poussière d'energite",
+  "tag.item.c.dusts.nickel": "Poussière de nickel",
+  "tag.item.c.dusts.platinum": "Poussière de platine",
+  "tag.item.c.dusts.quartz": "Poussière de quartz",
+  "tag.item.c.dusts.steel": "Poussière d'acier",
+  "tag.item.c.gems.fluxite": "Fluxite Gem",
+  "tag.item.c.ingots.adamant": "Lingot d'adamant",
+  "tag.item.c.ingots.biosteel": "Lingot de biosteel",
+  "tag.item.c.ingots.duratium": "Lingot de duratium",
+  "tag.item.c.ingots.electrum": "Lingot d'électrum",
+  "tag.item.c.ingots.energite": "Lingot d'energite",
+  "tag.item.c.ingots.nickel": "Lingot de nickel",
+  "tag.item.c.ingots.platinum": "Lingot de platine",
+  "tag.item.c.ingots.prometheum": "Prometheum Ingot",
+  "tag.item.c.ingots.steel": "Lingot d'acier",
+  "tag.item.c.nuggets.nickel": "Éclat de nickel",
+  "tag.item.c.nuggets.platinum": "Éclat de platine",
+  "tag.item.c.ores.nickel": "Minerai de nickel",
+  "tag.item.c.ores.platinum": "Platinum Ore",
+  "tag.item.c.raw_materials.dyes.black": "Black Dye",
+  "tag.item.c.raw_materials.dyes.blue": "Blue Dye",
+  "tag.item.c.raw_materials.dyes.cyan": "Cyan Dye",
+  "tag.item.c.raw_materials.dyes.light_gray": "Light Gray Dye",
+  "tag.item.c.raw_materials.dyes.magenta": "Magenta Dye",
+  "tag.item.c.raw_materials.dyes.orange": "Orange Dye",
+  "tag.item.c.raw_materials.dyes.pink": "Pink Dye",
+  "tag.item.c.raw_materials.dyes.red": "Red Dye",
+  "tag.item.c.raw_materials.dyes.white": "White Dye",
+  "tag.item.c.raw_materials.dyes.yellow": "Yellow Dye",
+  "tag.item.c.raw_ores.nickel": "Nickel brut",
+  "tag.item.c.raw_ores.platinum": "Platine brut",
+  "tag.item.c.silicon": "Silicone",
+  "tag.item.c.storage_blocks.adamant": "Adamant Block",
+  "tag.item.c.storage_blocks.biomass": "Biomass Block",
+  "tag.item.c.storage_blocks.biosteel": "Biosteel Block",
+  "tag.item.c.storage_blocks.duratium": "Duratium Block",
+  "tag.item.c.storage_blocks.electrum": "Electrum Block",
+  "tag.item.c.storage_blocks.energite": "Energite Block",
+  "tag.item.c.storage_blocks.fluxite": "Fluxite Block",
+  "tag.item.c.storage_blocks.nickel": "Nickel Block",
+  "tag.item.c.storage_blocks.plastic": "Plastic Block",
+  "tag.item.c.storage_blocks.platinum": "Platinum Block",
+  "tag.item.c.storage_blocks.raw_nickel": "Raw Nickel Block",
+  "tag.item.c.storage_blocks.raw_platinum": "Raw Platinum Block",
+  "tag.item.c.storage_blocks.silicon": "Silicon Block",
+  "tag.item.c.storage_blocks.steel": "Steel Block",
+  "tag.item.c.wires": "Wires",
+  "tag.item.oritech.biomass": "Biomasse",
+  "tag.item.oritech.plating": "Plating"
 }
