--- a/common/src/main/resources/assets/oritech/lang/pt_br.json
+++ b/common/src/main/resources/assets/oritech/lang/pt_br.json
@@ -280,7 +280,8 @@
   "tooltip.oritech.enchanter_item_needed": "Inserir Item",
   "tooltip.oritech.enchanter_souls_used": " Almas Usadas",
   "tooltip.oritech.enchanter_selection": "Selecionar Encantamento",
-  "tooltip.oritech.creative_tank": "Right click with a bucket to set or an empty one to empty",
+  "tooltip.oritech.creative_tank": "Right click with a bucket to set or an empty one to empty.",
+  "tooltip.oritech.fuel_generator_block.extra": "Outputs energy only at the visual connector ports.",
   "block.oritech.banana_block": "Bloco de Banana",
   "block.oritech.machine_frame_block": "Estrutura de Máquina",
   "block.oritech.fluid_pipe": "Tubo de Fluido",
@@ -400,7 +401,7 @@
   "block.oritech.raw_platinum_block": "Block of Raw Platinum",
   "block.oritech.black_hole_block": [
     {
-      "text": "Black Hole (WIP)",
+      "text": "Black Hole",
       "color": "#cc66ff"
     }
   ],
@@ -525,6 +526,7 @@
   "fluid.oritech.still_fuel": "Combustível Turbo",
   "fluid.oritech.still_oil": "Oil",
   "fluid.oritech.still_steam": "Vapor",
+  "item.oritech.wrench": "Pipe Wrench",
   "item.oritech.promethium_axe": [
     {
       "text": "Machadinha de Prometeu",
@@ -570,6 +572,15 @@
   "tooltip.oritech.tool_mode.area_range.area": "Modo: Área",
   "tooltip.oritech.tool_mode.area_range.single": "Modo: Único",
   "config.jade.plugin_oritech.machine_core_controller": "Visão do Link do Controlador Oritech",
+  "text.oritech.reactor.rod_count": "Rod Count: %s",
+  "text.oritech.reactor.generated_pulses": "Internal Pulses: %s",
+  "text.oritech.reactor.received_pulses": "External Pulses: %s",
+  "text.oritech.reactor.generated_heat": "Generated Heat: %s K/t",
+  "text.oritech.reactor.generated_energy": "Generated Energy: %s RF/t",
+  "text.oritech.reactor.heat_to_reactor": "Heat to Reactor: %s K/t",
+  "text.oritech.reactor.heat": "Heat: %s K",
+  "text.oritech.reactor.collected_heat": "Ingested Heat: %s K/t",
+  "text.oritech.reactor.removed_heat": "Dispersed Heat: %s K/t",
   "text.oritech.accelerator.ui.waiting.0": "Waiting.",
   "text.oritech.accelerator.ui.waiting.1": "Waiting..",
   "text.oritech.accelerator.ui.waiting.2": "Waiting...",
@@ -783,5 +794,60 @@
   "text.config.oritech-config.section.blackHole": "Black Hole",
   "text.config.oritech-config.option.pullTimeMultiplier": "Black Hole Pull Time Multiplier",
   "text.config.oritech-config.option.pullRange": "Black Hole Pull Range",
-  "text.config.oritech-config.option.idleWaitTicks": "Ticks de Espera para o Tempo de Inatividade"
+  "text.config.oritech-config.option.idleWaitTicks": "Ticks de Espera para o Tempo de Inatividade",
+  "tag.item.c.carbon_fibre": "Carbon Fibre",
+  "tag.item.c.dusts.adamant": "Pó de Adamante",
+  "tag.item.c.dusts.biosteel": "Pó de Bioaço",
+  "tag.item.c.dusts.coal": "Pó de Carvão",
+  "tag.item.c.dusts.duratium": "Pó de Duratium",
+  "tag.item.c.dusts.electrum": "Pó de Electrum",
+  "tag.item.c.dusts.energite": "Pó de Energita",
+  "tag.item.c.dusts.nickel": "Pó de Níquel",
+  "tag.item.c.dusts.platinum": "Pó de Platina",
+  "tag.item.c.dusts.quartz": "Pó de Quartzo",
+  "tag.item.c.dusts.steel": "Pó de Aço",
+  "tag.item.c.gems.fluxite": "Fluxite Gem",
+  "tag.item.c.ingots.adamant": "Lingote de Adamante",
+  "tag.item.c.ingots.biosteel": "Lingote de Bio",
+  "tag.item.c.ingots.duratium": "Lingote de Duratium",
+  "tag.item.c.ingots.electrum": "Lingote de Electrum",
+  "tag.item.c.ingots.energite": "Lingote de Energita",
+  "tag.item.c.ingots.nickel": "Lingote de Níquel",
+  "tag.item.c.ingots.platinum": "Lingote de Platina",
+  "tag.item.c.ingots.prometheum": "Prometheum Ingot",
+  "tag.item.c.ingots.steel": "Lingote de Aço",
+  "tag.item.c.nuggets.nickel": "Pepita de Níquel",
+  "tag.item.c.nuggets.platinum": "Pepita de Platina",
+  "tag.item.c.ores.nickel": "Minério de Níquel",
+  "tag.item.c.ores.platinum": "Platinum Ore",
+  "tag.item.c.raw_materials.dyes.black": "Black Dye",
+  "tag.item.c.raw_materials.dyes.blue": "Blue Dye",
+  "tag.item.c.raw_materials.dyes.cyan": "Cyan Dye",
+  "tag.item.c.raw_materials.dyes.light_gray": "Light Gray Dye",
+  "tag.item.c.raw_materials.dyes.magenta": "Magenta Dye",
+  "tag.item.c.raw_materials.dyes.orange": "Orange Dye",
+  "tag.item.c.raw_materials.dyes.pink": "Pink Dye",
+  "tag.item.c.raw_materials.dyes.red": "Red Dye",
+  "tag.item.c.raw_materials.dyes.white": "White Dye",
+  "tag.item.c.raw_materials.dyes.yellow": "Yellow Dye",
+  "tag.item.c.raw_ores.nickel": "Níquel Cru",
+  "tag.item.c.raw_ores.platinum": "Platina Crua",
+  "tag.item.c.silicon": "Silício",
+  "tag.item.c.storage_blocks.adamant": "Adamant Block",
+  "tag.item.c.storage_blocks.biomass": "Biomass Block",
+  "tag.item.c.storage_blocks.biosteel": "Biosteel Block",
+  "tag.item.c.storage_blocks.duratium": "Duratium Block",
+  "tag.item.c.storage_blocks.electrum": "Electrum Block",
+  "tag.item.c.storage_blocks.energite": "Energite Block",
+  "tag.item.c.storage_blocks.fluxite": "Fluxite Block",
+  "tag.item.c.storage_blocks.nickel": "Nickel Block",
+  "tag.item.c.storage_blocks.plastic": "Plastic Block",
+  "tag.item.c.storage_blocks.platinum": "Platinum Block",
+  "tag.item.c.storage_blocks.raw_nickel": "Raw Nickel Block",
+  "tag.item.c.storage_blocks.raw_platinum": "Raw Platinum Block",
+  "tag.item.c.storage_blocks.silicon": "Silicon Block",
+  "tag.item.c.storage_blocks.steel": "Steel Block",
+  "tag.item.c.wires": "Wires",
+  "tag.item.oritech.biomass": "Biomassa",
+  "tag.item.oritech.plating": "Plating"
 }
