--- a/common/src/main/resources/assets/oritech/lang/ru_ru.json
+++ b/common/src/main/resources/assets/oritech/lang/ru_ru.json
@@ -280,7 +280,8 @@
   "tooltip.oritech.enchanter_item_needed": "Вставка элемента",
   "tooltip.oritech.enchanter_souls_used": "Использовано душ",
   "tooltip.oritech.enchanter_selection": "Выбрать зачарование",
-  "tooltip.oritech.creative_tank": "Правый щелчок с пустой или пустой ковчеком для установки",
+  "tooltip.oritech.creative_tank": "Right click with a bucket to set or an empty one to empty.",
+  "tooltip.oritech.fuel_generator_block.extra": "Outputs energy only at the visual connector ports.",
   "block.oritech.banana_block": "Банановый блок",
   "block.oritech.machine_frame_block": "Машинный кадр",
   "block.oritech.fluid_pipe": "Жидкостная труба",
@@ -400,7 +401,7 @@
   "block.oritech.raw_platinum_block": "Block of Raw Platinum",
   "block.oritech.black_hole_block": [
     {
-      "text": "Black Hole (WIP)",
+      "text": "Чёрная дыра",
       "color": "#cc66ff"
     }
   ],
@@ -517,7 +518,7 @@
   "item.oritech.exo_boots": "Экзо-сапоги",
   "item.oritech.chainsaw": "Бензопила",
   "item.oritech.hand_drill": "Ручная бурильная установка",
-  "item.oritech.jetpack": "Jetpack",
+  "item.oritech.jetpack": "Реактивный Ранец",
   "item.oritech.exo_jetpack": "Exo Jetpack",
   "item.oritech.jetpack_elytra": "Boosted Elytra",
   "item.oritech.jetpack_exo_elytra": "Boosted Exo Elytra",
@@ -525,6 +526,7 @@
   "fluid.oritech.still_fuel": "Турботопливо",
   "fluid.oritech.still_oil": "Oil",
   "fluid.oritech.still_steam": "Пар",
+  "item.oritech.wrench": "Разводной ключ",
   "item.oritech.promethium_axe": [
     {
       "text": "Боевой топор Прометея",
@@ -570,6 +572,15 @@
   "tooltip.oritech.tool_mode.area_range.area": "Режим: Область",
   "tooltip.oritech.tool_mode.area_range.single": "Режим Одиночный",
   "config.jade.plugin_oritech.machine_core_controller": "Контроллер Oritech Просмотр ссылок",
+  "text.oritech.reactor.rod_count": "Rod Count: %s",
+  "text.oritech.reactor.generated_pulses": "Internal Pulses: %s",
+  "text.oritech.reactor.received_pulses": "External Pulses: %s",
+  "text.oritech.reactor.generated_heat": "Generated Heat: %s K/t",
+  "text.oritech.reactor.generated_energy": "Generated Energy: %s RF/t",
+  "text.oritech.reactor.heat_to_reactor": "Heat to Reactor: %s K/t",
+  "text.oritech.reactor.heat": "Heat: %s K",
+  "text.oritech.reactor.collected_heat": "Ingested Heat: %s K/t",
+  "text.oritech.reactor.removed_heat": "Dispersed Heat: %s K/t",
   "text.oritech.accelerator.ui.waiting.0": "Ожидание.",
   "text.oritech.accelerator.ui.waiting.1": "Ожидание..",
   "text.oritech.accelerator.ui.waiting.2": "Ожидание...",
@@ -783,5 +794,60 @@
   "text.config.oritech-config.section.blackHole": "Чёрная дыра",
   "text.config.oritech-config.option.pullTimeMultiplier": "Множитель времени притяжения чёрной дыры",
   "text.config.oritech-config.option.pullRange": "Диапазон притяжения чёрной дыры",
-  "text.config.oritech-config.option.idleWaitTicks": "Тики ожидания простоя черной дыры"
+  "text.config.oritech-config.option.idleWaitTicks": "Тики ожидания простоя черной дыры",
+  "tag.item.c.carbon_fibre": "Carbon Fibre",
+  "tag.item.c.dusts.adamant": "Адамантитовый пыль",
+  "tag.item.c.dusts.biosteel": "Биостальная пыль",
+  "tag.item.c.dusts.coal": "Угольная пыль",
+  "tag.item.c.dusts.duratium": "Дюратиумный пыль",
+  "tag.item.c.dusts.electrum": "Электрумовая пыль",
+  "tag.item.c.dusts.energite": "Энергетическая пыль",
+  "tag.item.c.dusts.nickel": "Никелевая пыль",
+  "tag.item.c.dusts.platinum": "Платиновая пыль",
+  "tag.item.c.dusts.quartz": "Кварцевая пыль",
+  "tag.item.c.dusts.steel": "Стальная Пыль",
+  "tag.item.c.gems.fluxite": "Fluxite Gem",
+  "tag.item.c.ingots.adamant": "Адамантитовый слиток",
+  "tag.item.c.ingots.biosteel": "Биостальный слиток",
+  "tag.item.c.ingots.duratium": "Дюратиумный слиток",
+  "tag.item.c.ingots.electrum": "Электрумовый слиток",
+  "tag.item.c.ingots.energite": "Энергетический слиток",
+  "tag.item.c.ingots.nickel": "Слиток никеля",
+  "tag.item.c.ingots.platinum": "Слиток Платины",
+  "tag.item.c.ingots.prometheum": "Prometheum Ingot",
+  "tag.item.c.ingots.steel": "Стальной слиток",
+  "tag.item.c.nuggets.nickel": "Никелевый самородок",
+  "tag.item.c.nuggets.platinum": "Платиновый самородок",
+  "tag.item.c.ores.nickel": "Никелевая руда",
+  "tag.item.c.ores.platinum": "Platinum Ore",
+  "tag.item.c.raw_materials.dyes.black": "Black Dye",
+  "tag.item.c.raw_materials.dyes.blue": "Blue Dye",
+  "tag.item.c.raw_materials.dyes.cyan": "Cyan Dye",
+  "tag.item.c.raw_materials.dyes.light_gray": "Light Gray Dye",
+  "tag.item.c.raw_materials.dyes.magenta": "Magenta Dye",
+  "tag.item.c.raw_materials.dyes.orange": "Orange Dye",
+  "tag.item.c.raw_materials.dyes.pink": "Pink Dye",
+  "tag.item.c.raw_materials.dyes.red": "Red Dye",
+  "tag.item.c.raw_materials.dyes.white": "White Dye",
+  "tag.item.c.raw_materials.dyes.yellow": "Yellow Dye",
+  "tag.item.c.raw_ores.nickel": "Необработанный никель",
+  "tag.item.c.raw_ores.platinum": "Необработаная платина",
+  "tag.item.c.silicon": "Силикон",
+  "tag.item.c.storage_blocks.adamant": "Adamant Block",
+  "tag.item.c.storage_blocks.biomass": "Biomass Block",
+  "tag.item.c.storage_blocks.biosteel": "Biosteel Block",
+  "tag.item.c.storage_blocks.duratium": "Duratium Block",
+  "tag.item.c.storage_blocks.electrum": "Electrum Block",
+  "tag.item.c.storage_blocks.energite": "Energite Block",
+  "tag.item.c.storage_blocks.fluxite": "Fluxite Block",
+  "tag.item.c.storage_blocks.nickel": "Nickel Block",
+  "tag.item.c.storage_blocks.plastic": "Plastic Block",
+  "tag.item.c.storage_blocks.platinum": "Platinum Block",
+  "tag.item.c.storage_blocks.raw_nickel": "Raw Nickel Block",
+  "tag.item.c.storage_blocks.raw_platinum": "Raw Platinum Block",
+  "tag.item.c.storage_blocks.silicon": "Silicon Block",
+  "tag.item.c.storage_blocks.steel": "Steel Block",
+  "tag.item.c.wires": "Wires",
+  "tag.item.oritech.biomass": "Биомасса",
+  "tag.item.oritech.plating": "Plating"
 }
