--- a/common/src/main/resources/assets/oritech/lang/en_us.json
+++ b/common/src/main/resources/assets/oritech/lang/en_us.json
@@ -581,6 +581,7 @@
   "text.oritech.reactor.heat": "Heat: %s K",
   "text.oritech.reactor.collected_heat": "Ingested Heat: %s K/t",
   "text.oritech.reactor.removed_heat": "Dispersed Heat: %s K/t",
+  "text.oritech.reactor.absorbed_heat": "Absorbed Heat: %s K/t",
   "text.oritech.accelerator.ui.waiting.0": "Waiting.",
   "text.oritech.accelerator.ui.waiting.1": "Waiting..",
   "text.oritech.accelerator.ui.waiting.2": "Waiting...",
