--- a/common/src/main/resources/assets/oritech/lang/en_us.json
+++ b/common/src/main/resources/assets/oritech/lang/en_us.json
@@ -579,6 +579,7 @@
   "text.oritech.reactor.generated_energy": "Generated Energy: %s RF/t",
   "text.oritech.reactor.heat_to_reactor": "Heat to Reactor: %s K/t",
   "text.oritech.reactor.heat": "Heat: %s K",
+  "text.oritech.reactor.fuel": "Fuel: %s/%s",
   "text.oritech.reactor.collected_heat": "Ingested Heat: %s K/t",
   "text.oritech.reactor.removed_heat": "Dispersed Heat: %s K/t",
   "text.oritech.reactor.absorbed_heat": "Absorbed Heat: %s K/t",
