--- a/docs/resources/crude_oil.mdx
+++ b/docs/resources/crude_oil.mdx
@@ -7,6 +7,7 @@ icon: oritech:oil_bucket
 <ModAsset location="oritech:area/oil_well" width={700} />
 </center>
 
-Pockets of crude oil can be found in various underground locations. They are also common near the surface in desert biomes, where they can be seen gushing from the ground.
+Pockets of crude oil can be found in various underground locations. Large oil reservoirs can also be found on the surface, where they can be seen gushing from the ground.
+They are much more common in desert biomes.
 
 Crude oil can be processed with a [centrifuge](../processing/centrifuge) (equipped with a [fluid addon](../processing/addons)) to produce plastic sheets or turbofuel.
